samples/_failures_safe/1761220620_fc98ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_978b6f13.c: In function ‘main’:
./samples/SAFE/__tmp_978b6f13.c:165:5: error: expected ‘{’ at end of input
  165 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_978b6f13.c:165:5: error: expected declaration or statement at end of input
